Code smells (#2046)
Co-authored-by: Andrey Pereverzin <andrey.pereverzin@hmcts.net>